Header fixed at top of page and alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,10 @@ h4
 {
 	background: blue;
 }
-p
-{
-	/*background: white;*/
-}
-nav
-{
-	/*background: orange;*/
-}
 nav li
 {
 	display: inline;
-	margin-left: 0px
-	margin-right:30px;
+	font-size: 15px;
 }
 aside
 {
@@ -36,6 +27,8 @@ aside
 header
 {
 	background: grey;
+	position: fixed;
+	width: 100%;
 }
 .main
 {
@@ -74,43 +67,14 @@ footer
 	height: 200px;
 	width:450px;
 }
-/*h1,h2
-{
-	text-align: center;
-}
-
 a
 {
-	color: green;
-	margin-right: 30px;
+	color: white;
 }
-.wrap
+img
 {
-	min-width: 600px;
-	width:100%;
-	margin: auto;
-	background-color: black;
+	background: white;
+	margin-right: 0px;
+	float:right;
 }
-.content,aside,.boe
-{
-	height: 300px;
-}
-.content
-{
-	background-color: grey;
-	float: left;
-	width: 33%;
-}
-aside
-{
-	background-color: yellow;
-	float: left;
-	width: 33%;
-}
-.boe
-{
-	background-color: pink;
-	float:left;
-	width:33%;
-}
-*/
+
